Added Quote and Nav contents

--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
 </head>
 <body>
     <header class="outer-container header-section">
+        <img src="assets/pictures/TypewriterRonald.jpg" alt="Typewriter of Ronald Aalten" srcset="">
         <div class="inner-container header-container">
-            <!--nav> Wil je een navigatie bar? </nav-->
+            <div class="quote_container">
+                <h3>Ik begrijp liever mensen dan dat ik ze geloof, en ik geloof liever mensen dan dat ik ze begrijp.</h3>
+            </div>
+            <div class="picture_container">
+                <img src="assets/pictures/Ronald E Aalten.jpg" alt="Picture of Ronald" srcset="">
+            </div>
+            <!--nav>AboutMe, Gallery, Services, Contact, WoerdeseWoorden</nav-->
         </div>
     </header>
     <main>
