added styling and fonts

--- a/index.html
+++ b/index.html
@@ -14,9 +14,17 @@
                 <h3>Ik begrijp liever mensen dan dat ik ze geloof, en ik geloof liever mensen dan dat ik ze begrijp.</h3>
             </div>
             <div class="picture_container">
-                <img src="assets/pictures/Ronald E Aalten.jpg" alt="Picture of Ronald" srcset="">
+                <img src="assets/pictures/" alt="Picture of Ronald" srcset="">
             </div>
             <!--nav>AboutMe, Gallery, Services, Contact, WoerdeseWoorden</nav-->
+            <ul class="nav-bar">
+                <li>Home</li>
+                <li><a href="aboutme.html">About Me</a></li>
+                <li><a href="gallery.html">gallery</a></li>
+                <li><a href="services">Services</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=61558173716748">Woerdense Woorden</a></li>
+            </ul>
         </div>
     </header>
     <main>
