--- a/index.html
+++ b/index.html
@@ -8,23 +8,26 @@
 </head>
 <body>
     <header class="outer-container header-section">
-        <img src="assets/pictures/TypewriterRonald.jpg" alt="Typewriter of Ronald Aalten" srcset="">
         <div class="inner-container header-container">
+            <nav class="header-navigation">
+                <ul class="nav-bar">
+                            <!--nav>About Me, Gallery, Services, Contact, Woerdense Woorden</nav-->
+                    <li>Home</li>
+                    <li><a href="aboutme.html">Over mij</a></li>
+                    <li><a href="gallery.html">galerij</a></li>
+                    <li><a href="services">Services</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li class="WW"><a href="https://www.facebook.com/profile.php?id=61558173716748">Woerdense Woorden</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="header-image">
             <div class="quote_container">
                 <h3>Ik begrijp liever mensen dan dat ik ze geloof, en ik geloof liever mensen dan dat ik ze begrijp.</h3>
             </div>
             <div class="picture_container">
                 <img src="assets/pictures/" alt="Picture of Ronald" srcset="">
             </div>
-            <!--nav>AboutMe, Gallery, Services, Contact, WoerdeseWoorden</nav-->
-            <ul class="nav-bar">
-                <li>Home</li>
-                <li><a href="aboutme.html">About Me</a></li>
-                <li><a href="gallery.html">gallery</a></li>
-                <li><a href="services">Services</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="https://www.facebook.com/profile.php?id=61558173716748">Woerdense Woorden</a></li>
-            </ul>
         </div>
     </header>
     <main>
