--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <li>Home</li>
                     <li><a href="aboutme.html">Over mij</a></li>
                     <li><a href="gallery.html">galerij</a></li>
-                    <li><a href="services">Services</a></li>
+                    <li><a href="services.html">Services</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li class="WW"><a href="https://www.facebook.com/profile.php?id=61558173716748">Woerdense Woorden</a></li>
                 </ul>
