--- a/services.html
+++ b/services.html
@@ -13,9 +13,9 @@
                 <ul class="nav-bar">
                             <!--nav>About Me, Gallery, Services, Contact, Woerdense Woorden</nav-->
                     <li><a href="index.html">Home</a></li>
-                    <li>Over mij</li>
+                    <li><a href="aboutme.html">Over mij</a></li>
                     <li><a href="gallery.html">galerij</a></li>
-                    <li><a href="services.html">Services</a></li>
+                    <li>Services</li>
                     <li><a href="contact.html">Contact</a></li>
                     <li class="WW"><a href="https://www.facebook.com/profile.php?id=61558173716748">Woerdense Woorden</a></li>
                 </ul>
