added styling, changed index navigation layout

--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,11 @@
             </nav>
         </div>
         <div class="header-image">
+            <div class="name-container">
+                <h1>Ronald Aalten</h1>
+            </div>
             <div class="quote_container">
-                <h3>Ik begrijp liever mensen dan dat ik ze geloof, en ik geloof liever mensen dan dat ik ze begrijp.</h3>
+                <h3>Ik begrijp liever mensen dan dat ik ze geloof en ik geloof liever mensen dan dat ik ze begrijp.</h3>
             </div>
             <div class="picture_container">
                 <img src="assets/pictures/" alt="Picture of Ronald" srcset="">
