--- a/index.html
+++ b/index.html
@@ -1,47 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/stylesheet.css">
     <title>Ronald Aalten Poëzie</title>
 </head>
+
 <body>
-    <header class="outer-container header-section">
-        <div class="inner-container header-container">
-            <nav class="header-navigation">
-                <ul class="nav-bar">
-                            <!--nav>About Me, Gallery, Services, Contact, Woerdense Woorden</nav-->
-                    <li>Home</li>
-                    <li><a href="aboutme.html">Over mij</a></li>
+    <header class="header-main hero-container">
+        <div class="header-main-name">
+            <nav class="header-main-nav">
+                <div class="header-main-title"><h1>Ronald<br>Aalten</h1></div>
+                <ul class="nav-list">
+                    <li><a href="aboutme.html">over mij</a></li>
                     <li><a href="gallery.html">galerij</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li class="WW"><a href="https://www.facebook.com/profile.php?id=61558173716748">Woerdense Woorden</a></li>
+                    <li><a href="contact.html">contact</a></li>
                 </ul>
+                <div class="nav-ext">
+                    <a class="nav-ext-ww-fb" href="https://www.facebook.com/profile.php?id=61558173716748"><img src="assets/pictures/wwposter.jpg" alt="Woerdense Woorden poster">
+                    </a>
+                </div>
             </nav>
         </div>
-        <div class="header-image">
-            <div class="quote_container">
-                <h3>Ik begrijp liever mensen dan dat ik ze geloof, en ik geloof liever mensen dan dat ik ze begrijp.</h3>
-            </div>
-            <div class="picture_container">
-                <img src="assets/pictures/" alt="Picture of Ronald" srcset="">
-            </div>
-        </div>
+        <div class="hero-quote"><h3>Ik begrijp liever mensen dan dat ik ze geloof en ik geloof liever mensen dan dat ik ze begrijp.</h3></div>
     </header>
-    <main>
-        <section class="outer-container body-section">
-            <div class="inner-container ">
-                <article class="sample-container">
-
-                </article>
-                <article class="aboutme"></article>
-            </div>
-        </section>
-    </main>
-    <footer class="outer-container footer-section">
-
-    </footer>
 </body>
 </html>
