--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
                             <!--nav>About Me, Gallery, Services, Contact, Woerdense Woorden</nav-->
                     <li><a href="index.html">Home</a></li>
                     <li><a href="aboutme.html">Over mij</a></li>
-                    <li><a href="gallery.html">galerij</a></li>
+                    <li></li>
                     <li>Services</li>
                     <li><a href="contact.html">Contact</a></li>
                     <li class="WW"><a href="https://www.facebook.com/profile.php?id=61558173716748">Woerdense Woorden</a></li>
@@ -22,8 +22,11 @@
             </nav>
         </div>
         <div class="header-image">
+            <div class="name-container">
+                <h1>Ronald Aalten</h1>
+            </div>
             <div class="quote_container">
-                <h3>Ik begrijp liever mensen dan dat ik ze geloof, en ik geloof liever mensen dan dat ik ze begrijp.</h3>
+                <h3>Ik begrijp liever mensen dan dat ik ze geloof en ik geloof liever mensen dan dat ik ze begrijp.</h3>
             </div>
             <div class="picture_container">
                 <img src="assets/pictures/" alt="Picture of Ronald" srcset="">
