--- a/aboutme.html
+++ b/aboutme.html
@@ -22,11 +22,14 @@
             </nav>
         </div>
         <div class="header-image">
-            <div class="quote_container">
-                <h3>Ik begrijp liever mensen dan dat ik ze geloof, en ik geloof liever mensen dan dat ik ze begrijp.</h3>
+            <div class="name-container">
+                <h1>Ronald Aalten</h1>
+            </div>
+            <div class="quote-container">
+                <h3>Ik begrijp liever mensen dan dat ik ze geloof en ik geloof liever mensen dan dat ik ze begrijp.</h3>
             </div>
             <div class="picture_container">
-                <img src="assets/pictures/" alt="Picture of Ronald" srcset="">
+                <img src="assets/pictures/R_I7A8122 kopie.jpg" alt="Picture of Ronald" srcset="">
             </div>
         </div>
     </header>
